--- a/index.html
+++ b/index.html
@@ -8,32 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Open Sans', sans-serif; }
-        .nav-link { margin: 0 15px; color: #000; font-size: 1rem; padding: 0.5rem 1rem; display: inline-block; }
-        .header { background-image: url('https://i.imgur.com/eQJWfnG.jpeg'); background-size: cover; background-position: center; height: 60vh; display: flex; align-items: center; justify-content: center; position: relative; }
+        body { font-family: 'Open Sans', sans-serif; margin: 0; padding: 0; box-sizing: border-box; }
+        .header { background-image: url('https://source.unsplash.com/random/1200x600?news'); background-size: cover; background-position: center; height: 50vh; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; }
         .header-overlay { background-color: rgba(0, 0, 0, 0.5); position: absolute; top: 0; left: 0; right: 0; bottom: 0; }
         .header-content { position: relative; z-index: 1; text-align: center; color: white; }
-        .header-content h1 { font-size: 4rem; font-weight: 700; }
-        .header-content p { font-size: 1.25rem; }
-        .card { background: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); overflow: hidden; transition: transform 0.2s; }
-        .card:hover { transform: scale(1.05); }
-        .card img { width: 100%; height: 200px; object-fit: cover; }
-        .card-content { padding: 20px; }
-        .card-title { font-size: 1.5rem; font-weight: 700; }
-        .card-subtitle { color: #9CA3AF; text-transform: uppercase; font-size: 0.875rem; margin-bottom: 0.5rem; }
-        .fade-in { opacity: 0; transition: opacity 1s; }
-        .fade-in.show { opacity: 1; }
-        .btn_wrap { position: relative; display: flex; justify-content: center; align-items: center; overflow: hidden; cursor: pointer; width: 240px; height: 40px; background-color: #EEEEED; border-radius: 20px; padding: 0 18px; will-change: transform; transition: all .2s ease-in-out; }
-        .btn_wrap:hover { transform: scale(1.1); }
-        .btn_wrap span { position: absolute; z-index: 99; width: 240px; height: 40px; border-radius: 20px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 1rem; text-align: center; line-height: 40px; letter-spacing: 2px; color: #EEEEED; background-color: #1F1E1E; padding: 0 18px; transition: all 1.2s ease; }
-        .container { display: flex; justify-content: space-around; align-items: center; width: 100%; height: 100%; border-radius: 20px; }
-        .container i { opacity: 0; font-size: 1.25rem; color: #1F1E1E; will-change: transform; transform: scale(.1); transition: all .3s ease; }
-        .container i:nth-of-type(1) { transition-delay: 1.1s; }
-        .container i:nth-of-type(2) { transition-delay: .9s; }
-        .container i:nth-of-type(3) { transition-delay: .7s; }
-        .container i:nth-of-type(4) { transition-delay: .4s; }
-        .btn_wrap:hover span { transition-delay: .25s; transform: translateX(-280px); }
-        .btn_wrap:hover i { opacity: 1; transform: scale(1); }
+        .header-content h1 { font-size: 3rem; font-weight: 700; margin-bottom: 20px; }
+        nav { display: flex; gap: 20px; margin-top: 10px; }
+        nav a { color: #fff; text-decoration: none; font-weight: 700; padding: 10px 20px; background-color: rgba(0, 0, 0, 0.5); border-radius: 5px; }
+        nav a:hover { background-color: rgba(0, 0, 0, 0.7); }
+        .articles { display: flex; flex-wrap: wrap; justify-content: center; margin: 20px 0; }
+        .article-card { background: #fff; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin: 10px; width: calc(33% - 20px); overflow: hidden; }
+        .article-card img { width: 100%; height: 150px; object-fit: cover; }
+        .article-content { padding: 15px; }
+        .article-title { font-size: 1.25rem; font-weight: 700; margin-bottom: 10px; }
+        .article-bias { display: flex; justify-content: space-between; margin-bottom: 10px; }
+        .bias-left { color: #dc2626; }
+        .bias-center { color: #6b7280; }
+        .bias-right { color: #2563eb; }
     </style>
 </head>
 <body>
@@ -41,38 +32,49 @@
         <div class="header-overlay"></div>
         <div class="header-content">
             <h1>Perspectiv</h1>
-            <p>Un média avec des biais politiques</p>
+            <nav>
+                <a href="profil.html">Profil</a>
+                <a href="articles.html">Articles</a>
+                <a href="apropos.html">À propos</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
     </header>
-    <nav class="flex justify-center mt-5">
-        <a href="index.html" class="nav-link">Accueil</a>
-        <a href="articles.html" class="nav-link">Articles</a>
-        <a href="apropos.html" class="nav-link">À propos</a>
-        <a href="contact.html" class="nav-link">Contact</a>
-    </nav>
-    <main class="flex flex-wrap justify-around mt-10">
-        <div class="card fade-in">
+    <main class="articles">
+        <div class="article-card">
             <img src="https://source.unsplash.com/random/300x200?politics" alt="Article 1">
-            <div class="card-content">
-                <h2 class="card-title">Articles 1</h2>
-                <p class="card-subtitle">Politique</p>
-                <p class="card-text">Découvrez les derniers articles sur la politique avec une perspective unique.</p>
+            <div class="article-content">
+                <div class="article-title">Article sur la politique</div>
+                <div class="article-bias">
+                    <span class="bias-left">Gauche 36%</span>
+                    <span class="bias-center">Centre 42%</span>
+                    <span class="bias-right">Droite 22%</span>
+                </div>
+                <p>Description de l'article sur la politique avec différents biais politiques analysés.</p>
             </div>
         </div>
-        <div class="card fade-in">
+        <div class="article-card">
             <img src="https://source.unsplash.com/random/300x200?media" alt="Article 2">
-            <div class="card-content">
-                <h2 class="card-title">Articles 2</h2>
-                <p class="card-subtitle">Médias</p>
-                <p class="card-text">Analyse des médias et de leur influence sur l'opinion publique.</p>
+            <div class="article-content">
+                <div class="article-title">Analyse des médias</div>
+                <div class="article-bias">
+                    <span class="bias-left">Gauche 45%</span>
+                    <span class="bias-center">Centre 35%</span>
+                    <span class="bias-right">Droite 20%</span>
+                </div>
+                <p>Examen de l'influence des médias sur l'opinion publique.</p>
             </div>
         </div>
-        <div class="card fade-in">
+        <div class="article-card">
             <img src="https://source.unsplash.com/random/300x200?culture" alt="Article 3">
-            <div class="card-content">
-                <h2 class="card-title">Articles 3</h2>
-                <p class="card-subtitle">Culture</p>
-                <p class="card-text">Exploration des tendances culturelles et de leur impact sur la société.</p>
+            <div class="article-content">
+                <div class="article-title">Tendances culturelles</div>
+                <div class="article-bias">
+                    <span class="bias-left">Gauche 30%</span>
+                    <span class="bias-center">Centre 50%</span>
+                    <span class="bias-right">Droite 20%</span>
+                </div>
+                <p>Exploration des tendances culturelles et de leur impact social.</p>
             </div>
         </div>
     </main>
