--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Open Sans', sans-serif; margin: 0; padding: 0; box-sizing: border-box; }
-        .header { background-image: url('https://source.unsplash.com/random/1200x600?news'); background-size: cover; background-position: center; height: 50vh; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; }
+        .header { background-image: url('https://i.imgur.com/ATr3P6g.jpeg'); background-size: cover; background-position: center; height: 50vh; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; }
         .header-overlay { background-color: rgba(0, 0, 0, 0.5); position: absolute; top: 0; left: 0; right: 0; bottom: 0; }
         .header-content { position: relative; z-index: 1; text-align: center; color: white; }
         .header-content h1 { font-size: 3rem; font-weight: 700; margin-bottom: 20px; }
