--- a/index.html
+++ b/index.html
@@ -416,5 +416,13 @@ label {
     </div>
 </main>
 
+<!-- Derniers Articles -->
+<section class="latest-articles mt-10">
+    <h1 class="text-4xl font-bold mb-10 text-center">Derniers Articles</h1>
+    <div id="news-section">
+        <!-- Les articles seront chargés ici par jQuery -->
+    </div>
+</section>
+
 </body>
 </html>
