--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Sign Up Page</title>
     <style>
         body {
-            background-color: #111827;
+            background-color: #e9e9e9;
             font-family: 'Montserrat', sans-serif;
             font-size: 16px;
             line-height: 1.25;
@@ -171,7 +171,7 @@
         <form action="" class="form-login">
             <ul class="login-nav">
                 <li class="login-nav__item">
-                    <a href="#">Sign In</a>
+                    <a href="signin.html">Sign In</a>
                 </li>
                 <li class="login-nav__item active">
                     <a href="#">Sign Up</a>
