--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ label {
                 <a href="articles.html" class="border-transparent text-gray-300 hover:border-gray-700 hover:text-gray-100 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">Articles</a>
             </div>
             <div class="flex items-center">
-                <a href="login.html" class="text-gray-300 hover:text-gray-100 inline-flex items-center px-1 pt-1 text-sm font-medium">Login</a>
+                <a href="signin.html" class="text-gray-300 hover:text-gray-100 inline-flex items-center px-1 pt-1 text-sm font-medium">Login</a>
             </div>
         </div>
     </div>
