--- a/signin.html
+++ b/signin.html
@@ -6,7 +6,7 @@
     <title>Sign In Page</title>
     <style>
         body {
-            background-color: #e9e9e9;
+            background-color: #111827;
             font-family: 'Montserrat', sans-serif;
             font-size: 16px;
             line-height: 1.25;
