--- a/signup.html
+++ b/signup.html
@@ -168,7 +168,7 @@
 </head>
 <body>
     <div class="login-container">
-        <form action="" class="form-login">
+        <form action="http://localhost/register.php" method="POST" class="form-login">
             <ul class="login-nav">
                 <li class="login-nav__item">
                     <a href="signin.html">Sign In</a>
@@ -180,15 +180,15 @@
             <label for="login-input-user" class="login__label">
                 Username
             </label>
-            <input id="login-input-user" class="login__input" type="text" />
+            <input id="login-input-user" class="login__input" type="text" name="username" required />
             <label for="login-input-email" class="login__label">
                 Email
             </label>
-            <input id="login-input-email" class="login__input" type="email" />
+            <input id="login-input-email" class="login__input" type="email" name="email" required />
             <label for="login-input-password" class="login__label">
                 Password
             </label>
-            <input id="login-input-password" class="login__input" type="password" />
+            <input id="login-input-password" class="login__input" type="password" name="password" required />
             <button class="login__submit">Sign up</button>
         </form>
     </div>
