--- a/signin.html
+++ b/signin.html
@@ -183,7 +183,7 @@
 </head>
 <body>
     <div class="login-container">
-        <form action="http://localhost/login.php" method="POST" class="form-login">
+        <form action="http://localhost/login/login.php" method="POST" class="form-login">
             <ul class="login-nav">
                 <li class="login-nav__item active">
                     <a href="#">Sign In</a>
