--- a/signup.html
+++ b/signup.html
@@ -168,7 +168,7 @@
 </head>
 <body>
     <div class="login-container">
-        <form action="register.php" method="POST" class="form-login">
+        <form action="http://localhost/login/register.php" method="POST" class="form-login">
             <ul class="login-nav">
                 <li class="login-nav__item">
                     <a href="signin.html">Sign In</a>
